<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:id="@+id/url_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/url_text"
        android:textSize="20sp"
        android:textColor="#000000"
         />

    <EditText
        android:id="@+id/user_url_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url_val"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:id="@+id/term_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/term_text"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_above="@+id/user_term_input"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/user_term_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/term_val"
        android:layout_above="@+id/enter_button"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="70dp" />

    <Button
        android:id="@+id/enter_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter"
        android:onClick="enter_handler"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
